api: drones, wh, mf
