# src/main/kotlin/ru/bardinpetr/itmo/meddelivery/app/controller/TypeOfDroneController.kt
@@ -5,9 +5,11 @@ import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
 import ru.bardinpetr.itmo.meddelivery.app.dto.TypeOfDroneDto
 import ru.bardinpetr.itmo.meddelivery.app.entities.TypeOfDrone
+import ru.bardinpetr.itmo.meddelivery.common.models.IdType
 import ru.bardinpetr.itmo.meddelivery.common.rest.controller.AbstractCommonRestController
 
 @RequestMapping("/api/typeofdrone")
 @RestController
-class TypeOfDroneController : AbstractCommonRestController<TypeOfDrone, TypeOfDroneDto>(TypeOfDrone::class)
-        
+class TypeOfDroneController : AbstractCommonRestController<TypeOfDrone, TypeOfDroneDto>(TypeOfDrone::class) {
+    override fun remove(id: IdType) = throw IllegalAccessException("Not available")
+}
