# src/main/kotlin/ru/bardinpetr/itmo/meddelivery/app/dto/DroneDto.kt
@@ -1,17 +1,16 @@
 package ru.bardinpetr.itmo.meddelivery.app.dto
 
- import ru.bardinpetr.itmo.meddelivery.app.entities.DroneStatus
-
- /**
- * DTO for {@link ru.bardinpetr.itmo.meddelivery.app.entities.Drone}
- */
+import ru.bardinpetr.itmo.meddelivery.app.entities.DroneStatus
 import ru.bardinpetr.itmo.meddelivery.common.rest.base.IBaseDto
 
+/**
+ * DTO for {@link ru.bardinpetr.itmo.meddelivery.app.entities.Drone}
+ */
 data class DroneDto(
-     val typeOfDroneName: String?,
-     val status: DroneStatus?,
-     val locationLat: Double?,
-     val locationLon: Double?,
-     val flightTaskId: Long? = null,
-     override val id: Long? = null
- ) : IBaseDto
+    val typeOfDrone: TypeOfDroneDto?,
+    val status: DroneStatus? = DroneStatus.IDLE,
+    val locationLat: Double? = 0.0,
+    val locationLon: Double? = 0.0,
+    val flightTask: FlightTaskDto? = null,
+    override val id: Long? = null
+) : IBaseDto
